--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.3.3+1
+version: 2.3.5+1
 
 environment:
   sdk: ">=3.2.6 <4.0.0"
@@ -67,6 +67,7 @@ dependencies:
   tutorial_coach_mark: ^1.2.11
   flutter_dotenv: ^5.1.0
   flutter_launcher_icons: ^0.13.1
+  webview_flutter: ^4.7.0
 
 dev_dependencies:
   flutter_test:
